salesforce/force-app/main/default/objects/Lead/fields/DentShift_Diagnosis_Count__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Diagnosis_Count__c</fullName>
    <label>診断回数</label>
    <description>診断回数</description>
    <inlineHelpText>診断回数</inlineHelpText>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>