salesforce/force-app/main/default/objects/Lead/fields/DentShift_Diagnosis_Url__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Diagnosis_Url__c</fullName>
    <label>最新の診断結果ページ</label>
    <description>最新の診断結果ページ</description>
    <inlineHelpText>最新の診断結果ページ</inlineHelpText>
    <type>Url</type>
</CustomField>