salesforce/force-app/main/default/objects/Lead/fields/DentShift_Do_Not_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Do_Not_Call_Reason__c</fullName>
    <label>電話禁止の解除・変更の根拠</label>
    <description>電話禁止の解除・変更の根拠(担当者が入力。同意の経緯を記録。同期では書き込まない)</description>
    <inlineHelpText>電話禁止の解除・変更の根拠(担当者が入力。同意の経緯を記録。同期では書き込まない)</inlineHelpText>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>