salesforce/force-app/main/default/objects/Lead/fields/DentShift_Last_Diagnosed_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Last_Diagnosed_At__c</fullName>
    <label>最終診断日時</label>
    <description>最終診断日時</description>
    <inlineHelpText>最終診断日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>