salesforce/force-app/main/default/objects/Lead/fields/DentShift_Latest_Score__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Latest_Score__c</fullName>
    <label>最新診断の総合スコア</label>
    <description>最新診断の総合スコア</description>
    <inlineHelpText>最新診断の総合スコア</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>