salesforce/force-app/main/default/objects/Lead/fields/DentShift_Next_Consultation_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Next_Consultation_At__c</fullName>
    <label>次回の相談予約日時</label>
    <description>次回の相談予約日時(予約成立のもの)</description>
    <inlineHelpText>次回の相談予約日時(予約成立のもの)</inlineHelpText>
    <type>DateTime</type>
</CustomField>