salesforce/force-app/main/default/objects/Lead/fields/DentShift_Signed_Up_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Signed_Up_At__c</fullName>
    <label>会員登録日時</label>
    <description>会員登録日時</description>
    <inlineHelpText>会員登録日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>