salesforce/force-app/main/default/objects/Lead/fields/DentShift_Site_Domain__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Site_Domain__c</fullName>
    <label>診断対象サイトのドメイン</label>
    <description>診断対象サイトのドメイン(重複確認の参考値)</description>
    <inlineHelpText>診断対象サイトのドメイン(重複確認の参考値)</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>