salesforce/force-app/main/default/objects/Lead/fields/DentShift_Trial_Signup_Started_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Trial_Signup_Started_At__c</fullName>
    <label>会員登録・トライアル申込の開始日時</label>
    <description>会員登録・トライアル申込の開始日時(初回)</description>
    <inlineHelpText>会員登録・トライアル申込の開始日時(初回)</inlineHelpText>
    <type>DateTime</type>
</CustomField>