salesforce/force-app/main/default/objects/Lead/fields/DentShift_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>DentShift_UTM_Campaign__c</fullName>
    <label>初回流入 utm_campaign</label>
    <description>初回流入 utm_campaign</description>
    <inlineHelpText>初回流入 utm_campaign</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>