salesforce/force-app/main/default/objects/Lead/fields/DentShift_UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>DentShift_UTM_Content__c</fullName>
    <label>初回流入 utm_content</label>
    <description>初回流入 utm_content</description>
    <inlineHelpText>初回流入 utm_content</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>