salesforce/force-app/main/default/objects/Lead/fields/DentShift_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>DentShift_UTM_Medium__c</fullName>
    <label>初回流入 utm_medium</label>
    <description>初回流入 utm_medium</description>
    <inlineHelpText>初回流入 utm_medium</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>