salesforce/force-app/main/default/objects/Lead/fields/DentShift_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>DentShift_UTM_Source__c</fullName>
    <label>初回流入 utm_source</label>
    <description>初回流入 utm_source</description>
    <inlineHelpText>初回流入 utm_source</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>