salesforce/force-app/main/default/objects/Lead/fields/DentShift_UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>DentShift_UTM_Term__c</fullName>
    <label>初回流入 utm_term</label>
    <description>初回流入 utm_term</description>
    <inlineHelpText>初回流入 utm_term</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>